Fix: Fix bug with double overflow

--- a/client/src/components/MiniCard/MiniCard.module.css
+++ b/client/src/components/MiniCard/MiniCard.module.css
@@ -18,7 +18,7 @@
     justify-content: center;
     /* background-color: white; */
     position: absolute;
-    /* z-index: 1; */
+    z-index: 1;
     /* border-radius: 5px; */
     /* overflow: hidden; */
     animation: born 1s ease;
